--- a/jaxb-ri/bundles/osgi/osgi/pom.xml
+++ b/jaxb-ri/bundles/osgi/osgi/pom.xml
@@ -143,7 +143,7 @@ holder.
                                     com.sun.xml.xsom.*;version=${xsom.version},
                                     org.jvnet.fastinfoset;version=${fastinfoset.version},
                                     org.jvnet.fastinfoset.*;version=${fastinfoset.version},
-                                    org.jvnet.staxex;version=${staxex.version},
+                                    org.jvnet.staxex;version=${stax-ex.version},
                                     org.kohsuke.rngom.*;version=${rngom.version},
                                     org.relaxng.datatype;version=${relaxngDatatype.version},
                                     org.relaxng.datatype.*;version=${relaxngDatatype.version}
