--- a/jaxb-ri/codemodel/codemodel-annotation-compiler/pom.xml
+++ b/jaxb-ri/codemodel/codemodel-annotation-compiler/pom.xml
@@ -46,7 +46,7 @@
     <parent>
         <groupId>com.sun.xml.bind.mvn</groupId>
         <artifactId>jaxb-codemodel-parent</artifactId>
-        <version>2.2.9-b140128.1901</version>
+        <version>2.2.9-SNAPSHOT</version>
     </parent>
 
     <groupId>org.glassfish.jaxb</groupId>
