--- a/jaxb-ri/txw/runtime/pom.xml
+++ b/jaxb-ri/txw/runtime/pom.xml
@@ -47,7 +47,7 @@
     <parent>
         <groupId>com.sun.xml.bind.mvn</groupId>
         <artifactId>jaxb-txw-parent</artifactId>
-        <version>2.2.9-SNAPSHOT</version>
+        <version>2.2.9-b140130.1908</version>
     </parent>
 
     <groupId>org.glassfish.jaxb</groupId>
