--- a/jaxb-ri/codemodel/codemodel/pom.xml
+++ b/jaxb-ri/codemodel/codemodel/pom.xml
@@ -46,7 +46,7 @@
     <parent>
         <groupId>com.sun.xml.bind.mvn</groupId>
         <artifactId>jaxb-codemodel-parent</artifactId>
-        <version>2.2.10-SNAPSHOT</version>
+        <version>2.2.10</version>
     </parent>
 
     <groupId>org.glassfish.jaxb</groupId>
