--- a/jaxb-ri/docs/www/pom.xml
+++ b/jaxb-ri/docs/www/pom.xml
@@ -47,18 +47,12 @@ holder.
     <parent>
         <groupId>com.sun.xml.bind.mvn</groupId>
         <artifactId>jaxb-docs-parent</artifactId>
-        <version>2.2.10-SNAPSHOT</version>
+        <version>2.2.10</version>
     </parent>
 
     <artifactId>jaxb-www</artifactId>
     <packaging>pom</packaging>
     <name>JAXB WWW Help files</name>
-
-    <properties>
-        <jaxb.version>${release.impl.version}${release.impl.version.suffix}</jaxb.version>
-        <jaxb.bin>jaxb-ri-${release.impl.version}.zip</jaxb.bin>
-        <jaxb.src>jaxb-ri-${jaxb.version}.src.zip</jaxb.src>
-    </properties>
 
     <build>
         <plugins>
