--- a/jaxb-ri/txw/compiler/pom.xml
+++ b/jaxb-ri/txw/compiler/pom.xml
@@ -47,7 +47,7 @@
     <parent>
         <groupId>com.sun.xml.bind.mvn</groupId>
         <artifactId>jaxb-txw-parent</artifactId>
-        <version>2.2.10-SNAPSHOT</version>
+        <version>2.2.10</version>
     </parent>
 
     <groupId>org.glassfish.jaxb</groupId>
