--- a/jaxb-ri/boms/bom/pom.xml
+++ b/jaxb-ri/boms/bom/pom.xml
@@ -61,7 +61,7 @@
     <description>JAXB Bill of Materials (BOM)</description>
 
     <properties>
-        <jaxb-api.version>2.3.0-20150602.094817-1</jaxb-api.version>
+        <jaxb-api.version>2.3.0-SNAPSHOT</jaxb-api.version>
         <istack.version>2.22</istack.version>
         <fastinfoset.version>1.2.13</fastinfoset.version>
         <stax-ex.version>1.7.7</stax-ex.version>
