--- a/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle.properties
+++ b/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle.properties
@@ -1,7 +1,7 @@
 #
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright (c) 1997-2014 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 1997-2015 Oracle and/or its affiliates. All rights reserved.
 #
 # The contents of this file are subject to the terms of either the GNU
 # General Public License Version 2 only ("GPL") or the Common Development
@@ -88,8 +88,6 @@ Options:\n\
 \ \ -disableXmlSecurity  :  disables XML security features when parsing XML documents \n\
 \ \ -contentForWildcard  :  generates content property for types with multiple xs:any derived elements \n\
 \ \ -xmlschema         :  treat input as W3C XML Schema (default)\n\
-\ \ -relaxng           :  treat input as RELAX NG (experimental,unsupported)\n\
-\ \ -relaxng-compact   :  treat input as RELAX NG compact syntax (experimental,unsupported)\n\
 \ \ -dtd               :  treat input as XML DTD (experimental,unsupported)\n\
 \ \ -wsdl              :  treat input as WSDL and compile schemas inside it (experimental,unsupported)\n\
 \ \ -verbose           :  be extra verbose\n\
@@ -100,7 +98,7 @@ Options:\n\
 
 Driver.AddonUsage = \nExtensions:
 
-# {0} - one of: DTD, RELAX NG, RELAX NG compact syntax, WSDL; {1} - one of (respectively): -dtd, -relaxng, -relaxng-compact, -wsdl
+# {0} - one of: DTD, WSDL; {1} - one of (respectively): -dtd, -wsdl
 Driver.ExperimentalLanguageWarning = \
 	Are you trying to compile {0}? Support for {0} is experimental. \
 	You may enable it by using the {1} option.
