--- a/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle.properties
+++ b/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle.properties
@@ -74,6 +74,7 @@ Options:\n\
 \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ If a directory is given, **/*.xjb is searched\n\
 \ \ -d <dir>           :  generated files will go into this directory\n\
 \ \ -p <pkg>           :  specifies the target package\n\
+\ \ -m <name>          :  generate module-info.java with given Java module name\n\
 \ \ -httpproxy <proxy> :  set HTTP/HTTPS proxy. Format is [user[:password]@]proxyHost:proxyPort\n\
 \ \ -httpproxyfile <f> :  Works like -httpproxy but takes the argument in a file to protect password \n\
 \ \ -classpath <arg>   :  specify where to find user class files\n\
@@ -135,6 +136,9 @@ Driver.MissingProxyPort = \
 
 Driver.ILLEGAL_TARGET_VERSION = \
     "{0}" is not a valid target version. "2.0" and "2.1" are supported.
+# Java module name is invalid, {0} - Java module name.
+Driver.INVALID_JAVA_MODULE_NAME = \
+    invalid Java module name: "{0}"
 
 # Not concatenated with any other string (written on a separate line).
 Driver.MISSING_PROXYFILE = \
