--- a/jaxb-ri/bundles/pom.xml
+++ b/jaxb-ri/bundles/pom.xml
@@ -66,6 +66,7 @@ holder.
         <module>xjc</module>
         <module>jxc</module>
         <module>ri</module>
-        <module>osgi</module>
+        <!--TODO JDK9-->
+        <!--<module>osgi</module>-->
     </modules>
 </project>
