--- a/jaxb-ri/bundles/xjc/pom.xml
+++ b/jaxb-ri/bundles/xjc/pom.xml
@@ -53,7 +53,7 @@ holder.
     <groupId>com.sun.xml.bind</groupId>
     <artifactId>jaxb-xjc</artifactId>
 
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
     <name>Old JAXB XJC</name>
     <description>
         Old JAXB Binding Compiler. Contains source code needed for binding customization files into java sources.
@@ -61,10 +61,15 @@ holder.
         <!--todo: finish me-->
     </description>
 
+    <modules>
+        <module>../../jaxb-xjc-jdk9</module>
+    </modules>
+
     <dependencies>
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-xjc</artifactId>
+            <version>${project.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -187,7 +192,7 @@ holder.
                     </execution>
                 </executions>
             </plugin>
-            <plugin> <!-- want to unpack sources from individual modules -->
+            <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
@@ -251,7 +256,7 @@ holder.
                             </artifactItems>
                         </configuration>
                     </execution>
-                    <execution>
+                    <!--<execution>
                         <id>unpack-classes</id>
                         <phase>process-resources</phase>
                         <goals>
@@ -304,7 +309,7 @@ holder.
                                 </artifactItem>
                             </artifactItems>
                         </configuration>
-                    </execution>
+                    </execution>-->
                 </executions>
             </plugin>
 
@@ -328,12 +333,12 @@ holder.
                 </executions>
             </plugin>
 
-            <plugin>
+            <!--<plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
                     <useDefaultManifestFile>true</useDefaultManifestFile>
                 </configuration>
-            </plugin>
+            </plugin>-->
 
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -369,7 +374,7 @@ holder.
                 </executions>
             </plugin>
 
-            <plugin>
+           <!-- <plugin>
                 <artifactId>maven-shade-plugin</artifactId>
                 <executions>
                     <execution>
@@ -391,6 +396,7 @@ holder.
 
                                 <excludes>
                                     <exclude>org.glassfish.jaxb:jaxb-core</exclude>
+                                    <exclude>org.glassfish.jaxb:jaxb-xjc-jdk9</exclude>
                                     <exclude>javax.xml.bind:jaxb-api</exclude>
                                     <exclude>org.glassfish.jaxb:txw2</exclude>
                                     <exclude>javax.xml.stream:stax-api</exclude>
@@ -410,9 +416,66 @@ holder.
                                         <Major-Version>${jaxb.majorVersion}.${jaxb.minorVersion}.${jaxb.incrementalVersion}</Major-Version>
                                         <Specification-Version>${jaxb-api.majorVersion}.${jaxb-api.minorVersion}</Specification-Version>
                                         <Git-Revision>${buildNumber}</Git-Revision>
+                                        <Multi-Release>true</Multi-Release>
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>-->
+
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>make-assembly-src</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptors>
+                                <descriptor>src/main/assembly/assembly-src.xml</descriptor>
+                            </descriptors>
+                            <appendAssemblyId>true</appendAssemblyId>
+                           <!-- <archive>
+                                <manifest>
+                                    <mainClass>com.sun.tools.xjc.XJCFacade</mainClass>
+                                </manifest>
+                                <manifestEntries>
+                                    <Class-Path>jaxb-core.jar jaxb-impl.jar</Class-Path>
+                                    <Major-Version>${jaxb.majorVersion}.${jaxb.minorVersion}.${jaxb.incrementalVersion}</Major-Version>
+                                    <Specification-Version>${jaxb-api.majorVersion}.${jaxb-api.minorVersion}</Specification-Version>
+                                    <Git-Revision>${buildNumber}</Git-Revision>
+                                    <Multi-Release>true</Multi-Release>
+                                </manifestEntries>
+                            </archive>-->
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptors>
+                                <descriptor>src/main/assembly/assembly.xml</descriptor>
+                            </descriptors>
+                            <appendAssemblyId>false</appendAssemblyId>
+                            <archive>
+                                <manifest>
+                                    <mainClass>com.sun.tools.xjc.XJCFacade</mainClass>
+                                </manifest>
+                                <manifestEntries>
+                                    <Class-Path>jaxb-core.jar jaxb-impl.jar</Class-Path>
+                                    <Major-Version>${jaxb.majorVersion}.${jaxb.minorVersion}.${jaxb.incrementalVersion}</Major-Version>
+                                    <Specification-Version>${jaxb-api.majorVersion}.${jaxb-api.minorVersion}</Specification-Version>
+                                    <Git-Revision>${buildNumber}</Git-Revision>
+                                    <Multi-Release>true</Multi-Release>
+                                </manifestEntries>
+                            </archive>
                         </configuration>
                     </execution>
                 </executions>
